# Python-Explored

./: extra.txt  git_roadmap.txt
Crewai/: .gitignore  note.txt
Crewai/Notes/: basic.txt  note.txt  note2.txt  note3.txt
Crewai/project/basic_crewai/: README.md  pyproject.toml
Crewai/project/basic_crewai/src/basic_crewai/: crew.py  main.py
Crewai/project/marketing_crewai/: README.md  pyproject.toml
Crewai/project/marketing_crewai/src/marketing_crewai/: crew.py  main.py
Crewai/project/marketing_crewai/src/marketing_crewai/config/: agents.yaml  tasks.yaml
Crewai/react_agent/: agent.ipynb  agent_ai.py
Dependency_Injection/: py_1.py  py_2.py
Linux/: SizeOf.txt  linux.py  new_file1.txt  new_file3.txt
Linux/Test/: linux_basic.txt
N8N/: basic.py
Numpy/: base.py  np_1.py  np_3.py  np_5.py  np_7.py  np_8.py
Numpy/doc/: np_2.py  np_4.py  np_6.py  np_9.py
Numpy/online/: np_1.py  np_2.py  np_3.py  np_4.py  np_5.py  np_6.py  np_7.py  np_8.py
Pandas/: pandas.txt  pd_1.py  pd_2.py  pd_3.py  pd_4.py  pd_5.py  pd_6.py  pd_7.py  pd_pj_1.py  posts.csv  project_1.py
Prompt/notes/: basic.txt  chatgpt.txt
Pytest_Unit/: basic.py  make_triangle.py  math_funcs.py  py_1.py  py_2.py  py_3.py  test_compare.py
Pytest_Unit/FastAPI_Test/: basic.py  test_todo_api.py
Python/: python_1.py  python_2.py
Streamlit/: basic.py  chai_sales.csv  main.py  main_2.py  main_3.py  main_4.py  main_5.py
Streamlit/project/: py_1.py
Testing_Api/: dummy_api.py  main.py
Virtual-Env/: basic.py  second_env.py
doc/: docker.txt  git_windows_roadmap.txt  windows_cmd_roadmap.txt
(+2 files in other folders)
