[project]
name = "basic_crewai"
version = "0.1.0"
description = "basic_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
basic_crewai = "basic_crewai.main:run"
run_crew = "basic_crewai.main:run"
train = "basic_crewai.main:train"
replay = "basic_crewai.main:replay"
test = "basic_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
