[project]
name = "marketing_crewai"
version = "0.1.0"
description = "marketing_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
marketing_crewai = "marketing_crewai.main:run"
run_crew = "marketing_crewai.main:run"
train = "marketing_crewai.main:train"
replay = "marketing_crewai.main:replay"
test = "marketing_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
